crates/ddlog-syntax/tests/inline/pass/relation_with_multiple_modifiers.dl
// kind:item
input output relation Foo()
