crates/ddlog-syntax/tests/inline/fail/double_comma_relation_arg.dl
// kind:item
relation Foo(bar: Baz,,)
